syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dritelabs/accounts/pb";

message ClientApproval {
  string id = 1;
  string user_id = 2;
  string client_id = 3;
  repeated string scopes = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
